k8s/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app-svc
  labels:
    app: python-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: python-app
