k8s/service-ilb.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app-ilb
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
spec:
  type: LoadBalancer
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: python-app
